user submit & redirect to room

--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,11 +1,13 @@
 <div class="mx-auto text-center" style="width: 600px; margin-top: 10rem;">
   <h1 class="text-center">Let's Chat!</h1>
-  <input
-    class="form-control form-control-lg"
-    type="text"
-    placeholder="Enter Your Username"
-  />
-  <button type="submit" class="btn btn-primary" style="margin-top: 1rem;">
-    Submit
-  </button>
+  <form method="post" action="/rooms">
+    <input
+      class="form-control form-control-lg"
+      type="text"
+      placeholder="Enter Your Username"
+    />
+    <button type="submit" class="btn btn-primary" style="margin-top: 1rem;">
+      Submit
+    </button>
+  </form>
 </div>
