--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -41,7 +41,7 @@
       crossorigin="anonymous"
     />
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css" />
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
 
