--- a/views/rooms/new.ejs
+++ b/views/rooms/new.ejs
@@ -1,10 +1,10 @@
 <div class="mx-auto text-center" style="width: 600px; margin-top: 5rem;">
-  <h1 class="text-center">Let's Chat!</h1>
+  <h1 class="text-center">Create a new room!</h1>
   <form method="post" action="/rooms">
     <input
       class="form-control form-control-lg"
       type="text"
-      placeholder="Enter Your Username"
+      placeholder="Chatroom Name"
     />
     <button type="submit" class="btn btn-primary" style="margin-top: 1rem;">
       Submit
