--- a/views/rooms/index.ejs
+++ b/views/rooms/index.ejs
@@ -1,6 +1,8 @@
 <h1 class="mx-auto text-center" style="width: 600px; margin-top: 5rem;">
   Pick a Chatroom
 </h1>
+
+<p class="text font-weight-bold">Current User:</p>
 <table class="table table-striped">
   <thread>
     <tr>
@@ -22,3 +24,4 @@
   </tbody>
 </table>
 <a href="/rooms/new" class="btn btn-outline-primary">Create Chatroom</a>
+<a href="/" class="btn btn-outline-danger">Log Out</a>
