--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -4,6 +4,7 @@
     <input
       class="form-control form-control-lg"
       type="text"
+      name="username"
       placeholder="Enter Your Username"
     />
     <button type="submit" class="btn btn-primary" style="margin-top: 1rem;">
