--- a/views/rooms/index.ejs
+++ b/views/rooms/index.ejs
@@ -2,7 +2,7 @@
   Pick a Chatroom
 </h1>
 
-<p class="text font-weight-bold">Current User:</p>
+<p class="text font-weight-bold">Current User: <%= username %></p>
 <table class="table table-striped">
   <thread>
     <tr>
