show page for chatroom

--- a/views/rooms/index.ejs
+++ b/views/rooms/index.ejs
@@ -17,7 +17,7 @@
       <td><%= room.topic %></td>
       <td><%= "#" %></td>
       <td>
-        <input type="submit" value="Enter" class="btn btn-success" />
+        <a href="/rooms/<%=room.id%>" class="btn btn-success">Enter </a>
       </td>
     </tr>
     <% }) %>
