--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -50,6 +50,7 @@
       <%- body %>
     </div>
 
+
     <!--
         Client-side Templates
         ========================
@@ -135,5 +136,17 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+
+    <script type="text/javascript">
+      $(document).ready(() => {
+        console.log("Hey")
+        $("#send").click(() => {
+          const content = $("textarea").val();
+          console.log(content)
+        })
+      })
+      </script>
+
+
   </body>
 </html>
