--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -117,7 +117,7 @@
     <script src="/dependencies/sails.io.js"></script>
     <!--SCRIPTS END-->
 
-    <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.27.4.min.js"></script>
+    <!-- <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.27.4.min.js"></script> -->
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
@@ -136,16 +136,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-
-    <script type="text/javascript">
-      $(document).ready(() => {
-        console.log("Hey")
-        $("#send").click(() => {
-          const content = $("textarea").val();
-          console.log(content)
-        })
-      })
-      </script>
 
 
   </body>
