--- a/views/rooms/show.ejs
+++ b/views/rooms/show.ejs
@@ -36,6 +36,14 @@
         name="user"
         value="<%= currentUser.username %>"
       />
+
+      <input
+        style="width: 550px; margin-top: 1rem;"
+        type="hidden"
+        name="room"
+        value="<%= room.id %>"
+      />
+
       <button style="margin-top: 1rem;" type="submit" class="btn btn-success">
         Send
       </button>
