--- a/views/rooms/new.ejs
+++ b/views/rooms/new.ejs
@@ -1,5 +1,6 @@
 <div class="mx-auto text-center" style="width: 600px; margin-top: 5rem;">
   <h1 class="text-center">Create a new room!</h1>
+
   <form method="post" action="/rooms/create">
     <input
       class="form-control form-control-lg"
@@ -12,4 +13,8 @@
       Submit
     </button>
   </form>
+
+  <a href="/rooms" class="btn btn-warning" style="margin-top: 1rem;">
+    Back
+  </a>
 </div>
