add readme and doesn't send if field is empty

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -168,6 +168,8 @@
         $("#message-form").submit(function(e){
           e.preventDefault()
           let content = e.target.message.value
+
+          if (content === "") { return }
           let user = e.target.user.value
           let room = e.target.room.value
          
